# suraida

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  readthedocs.yml
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  contents.rst  contributors.rst  installation.rst
docs/source/api-doc/: apidoc.rst  classes.rst  modules.rst
docs/source/example/: example.ipynb  yunweiexample.ipynb  yunweiexample2.ipynb
example/: example.ipynb  yunweiexample2.ipynb
suraida/: __init__.py  gui.py  widgets.py
